<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coinsItemMainLayout"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cvimage"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:layout_width="180dp"
                android:layout_height="200dp"
                app:cardElevation="8dp"
                app:cardMaxElevation="8dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

            <ImageView
                android:id="@+id/image"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:src="@drawable/test_picture"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/test_title"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/description"
                app:layout_constraintStart_toEndOf="@id/cvimage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test_desc"
                android:ellipsize="end"
                android:maxLines="4"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toTopOf="@id/author"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test_author"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toTopOf="@id/date"
                />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_date"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="@id/author"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
