<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        >

    <ImageView
        android:id="@+id/newsDetailArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <TextView
            android:id="@+id/topbarHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginStart="100dp"
            android:text="News"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/newsDetailArrowBack"
            app:layout_constraintTop_toTopOf="@id/newsDetailArrowBack" />

        <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:elevation="12dp"
        android:id="@+id/newsImageCardView"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsDetailArrowBack">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/newsImage"
            android:scaleType="fitXY"
            android:src="@drawable/test_picture">
        </ImageView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        android:id="@+id/titleCardView"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsImageCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:textSize="15sp"

            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/test_title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/test_desc"
            android:ellipsize="end"
            android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        android:id="@+id/contentCard"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCardView">

            <TextView
                android:id="@+id/content"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_content"
                android:ellipsize="end"
                android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
